--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply border-divider;
+  }
+
+  body {
+    @apply bg-background text-foreground antialiased selection:bg-primary selection:text-background scroll-smooth;
+  }
+}
